# silabs-driver

./: CMakeLists.txt  info
driver/gecko_adc/: header_f19d3f5f.h
driver/gecko_uart/: header_74a74f3b.h
gecko/: CMakeLists.txt
gecko/clkmgr/: CMakeLists.txt  GeckoClkMgr.cpp  target_clock.h
gecko/gpio/: CMakeLists.txt  GeckoGPIO.cpp  auto.cmake
gecko/uart/: CMakeLists.txt  GeckoUART.cpp
